# python_homeworks

./: requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  main.py  ping_view.py
python_base_final_project/: pyproject.toml  Защита проекта_Доолоталиев.pptx
python_base_final_project/vehicle_adverts/: manage.py
python_base_final_project/vehicle_adverts/adverts/: admin.py  forms.py  models.py  urls.py  views.py
python_base_final_project/vehicle_adverts/adverts/migrations/: 0001_initial.py  0002_alter_advert_mod.py  0003_remove_advert_mod_remove_advert_model_and_more.py  0004_alter_vehiclemodel_vehicle.py  0005_advert_model_advert_vehicle.py  0006_remove_advert_year_of_manufacture_modelyear_and_more.py  0007_generation.py  0008_advert_generation.py  0009_remove_advert_generation_delete_generation.py  0010_alter_advert_photo.py  0011_alter_advert_photo.py
python_base_final_project/vehicle_adverts/adverts/templates/adverts/: advert_comfirm_activate.html  advert_confirm_delete.html  advert_detail.html  advert_form.html  advert_update_form.html  generation_options.html  model_options.html  user-adverts.html  year_options.html
python_base_final_project/vehicle_adverts/templates/: base.html  index.html
python_base_final_project/vehicle_adverts/user_auth/: forms.py  urls.py  views.py
python_base_final_project/vehicle_adverts/user_auth/templates/user_auth/: login.html  register.html  user-profile.html
python_base_final_project/vehicle_adverts/vehicle_adverts/: asgi.py  settings.py  urls.py  wsgi.py
(+21 files in other folders)
